# cs_proto_common

./: CMakeLists.txt
proto/: common_proto.proto
